perf evlist: Fix evlist__new_default() for > 1 core PMU (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3581,6 +3581,7 @@
 	patches.kernel.org/6.6.17-004-dmaengine-fsl-qdma-Fix-a-memory-leak-related-t.patch
 	patches.kernel.org/6.6.17-005-dmaengine-fsl-qdma-Fix-a-memory-leak-related-t.patch
 	patches.kernel.org/6.6.17-006-phy-renesas-rcar-gen3-usb2-Fix-returning-wrong.patch
+	patches.kernel.org/6.6.17-007-perf-evlist-Fix-evlist__new_default-for-1-core.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
