cifs: avoid redundant calls to disable multichannel (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3584,6 +3584,7 @@
 	patches.kernel.org/6.6.17-007-perf-evlist-Fix-evlist__new_default-for-1-core.patch
 	patches.kernel.org/6.6.17-008-dmaengine-fix-is_slave_direction-return-false-.patch
 	patches.kernel.org/6.6.17-009-phy-ti-phy-omap-usb2-Fix-NULL-pointer-derefere.patch
+	patches.kernel.org/6.6.17-010-cifs-avoid-redundant-calls-to-disable-multicha.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
