xfs: allow read IO and FICLONE to run concurrently (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3600,6 +3600,7 @@
 	patches.kernel.org/6.6.17-023-xfs-make-sure-maxlen-is-still-congruent-with-p.patch
 	patches.kernel.org/6.6.17-024-xfs-introduce-protection-for-drop-nlink.patch
 	patches.kernel.org/6.6.17-025-xfs-handle-nimaps-0-from-xfs_bmapi_write-in-xf.patch
+	patches.kernel.org/6.6.17-026-xfs-allow-read-IO-and-FICLONE-to-run-concurren.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
