selftests: net: fix tcp listener handling in pmtu.sh (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3628,6 +3628,7 @@
 	patches.kernel.org/6.6.17-051-selftests-net-convert-unicast_extensions.sh-to.patch
 	patches.kernel.org/6.6.17-052-selftests-net-convert-pmtu.sh-to-run-it-in-uni.patch
 	patches.kernel.org/6.6.17-053-selftests-net-change-shebang-to-bash-to-suppor.patch
+	patches.kernel.org/6.6.17-054-selftests-net-fix-tcp-listener-handling-in-pmt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
