netdevsim: avoid potential loop in nsim_dev_trap_report_work() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3622,6 +3622,7 @@
 	patches.kernel.org/6.6.17-045-wifi-mac80211-fix-waiting-for-beacons-logic.patch
 	patches.kernel.org/6.6.17-046-wifi-iwlwifi-exit-eSR-only-after-the-FW-does.patch
 	patches.kernel.org/6.6.17-047-wifi-brcmfmac-Adjust-n_channels-usage-for-__co.patch
+	patches.kernel.org/6.6.17-048-netdevsim-avoid-potential-loop-in-nsim_dev_tra.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
