--- a/series.conf
+++ b/series.conf
@@ -3676,6 +3676,7 @@
 	patches.kernel.org/6.6.17-099-ALSA-usb-audio-Add-delay-quirk-for-MOTU-M-Seri.patch
 	patches.kernel.org/6.6.17-100-ALSA-usb-audio-Add-a-quirk-for-Yamaha-YIT-W12T.patch
 	patches.kernel.org/6.6.17-101-ALSA-usb-audio-add-quirk-for-RODE-NT-USB.patch
+	patches.kernel.org/6.6.17-102-USB-serial-qcserial-add-new-usb-id-for-Dell-Wi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
