--- a/series.conf
+++ b/series.conf
@@ -3699,6 +3699,7 @@
 	patches.kernel.org/6.6.17-122-net-stmmac-xgmac-use-define-for-string-constan.patch
 	patches.kernel.org/6.6.17-123-ALSA-usb-audio-Sort-quirk-table-entries.patch
 	patches.kernel.org/6.6.17-124-net-stmmac-xgmac-fix-a-typo-of-register-name-i.patch
+	patches.kernel.org/6.6.17-125-netfilter-nft_set_rbtree-skip-end-interval-ele.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
