--- a/series.conf
+++ b/series.conf
@@ -3696,6 +3696,7 @@
 	patches.kernel.org/6.6.17-119-io_uring-net-un-indent-mshot-retry-path-in-io_.patch
 	patches.kernel.org/6.6.17-120-io_uring-poll-add-requeue-return-code-from-pol.patch
 	patches.kernel.org/6.6.17-121-io_uring-net-limit-inline-multishot-retries.patch
+	patches.kernel.org/6.6.17-122-net-stmmac-xgmac-use-define-for-string-constan.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
