--- a/series.conf
+++ b/series.conf
@@ -3650,6 +3650,7 @@
 	patches.kernel.org/6.6.17-073-selftests-cmsg_ipv6-repeat-the-exact-packet.patch
 	patches.kernel.org/6.6.17-074-netfilter-nft_compat-narrow-down-revision-to-u.patch
 	patches.kernel.org/6.6.17-075-netfilter-nft_compat-reject-unused-compat-flag.patch
+	patches.kernel.org/6.6.17-076-netfilter-nft_compat-restrict-match-target-pro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
