rxrpc: Fix generation of serial numbers to skip zero (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3639,6 +3639,7 @@
 	patches.kernel.org/6.6.17-062-hwmon-coretemp-Fix-bogus-core_id-to-attr-name-.patch
 	patches.kernel.org/6.6.17-063-inet-read-sk-sk_family-once-in-inet_recv_error.patch
 	patches.kernel.org/6.6.17-064-drm-i915-gvt-Fix-uninitialized-variable-in-han.patch
+	patches.kernel.org/6.6.17-065-rxrpc-Fix-generation-of-serial-numbers-to-skip.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
