riscv: Fix set_huge_pte_at() for NAPOT mapping (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3664,6 +3664,7 @@
 	patches.kernel.org/6.6.17-087-riscv-Improve-flush_tlb_kernel_range.patch
 	patches.kernel.org/6.6.17-088-mm-Introduce-flush_cache_vmap_early.patch
 	patches.kernel.org/6.6.17-089-riscv-mm-execute-local-TLB-flush-after-populat.patch
+	patches.kernel.org/6.6.17-090-riscv-Fix-set_huge_pte_at-for-NAPOT-mapping.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
