--- a/series.conf
+++ b/series.conf
@@ -3662,6 +3662,7 @@
 	patches.kernel.org/6.6.17-085-riscv-Improve-tlb_flush.patch
 	patches.kernel.org/6.6.17-086-riscv-Make-__flush_tlb_range-loop-over-pte-ins.patch
 	patches.kernel.org/6.6.17-087-riscv-Improve-flush_tlb_kernel_range.patch
+	patches.kernel.org/6.6.17-088-mm-Introduce-flush_cache_vmap_early.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
