blk-iocost: Fix an UBSAN shift-out-of-bounds warning (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3672,6 +3672,7 @@
 	patches.kernel.org/6.6.17-095-libceph-just-wait-for-more-data-to-be-availabl.patch
 	patches.kernel.org/6.6.17-096-riscv-Fix-arch_hugetlb_migration_supported-for.patch
 	patches.kernel.org/6.6.17-097-riscv-declare-overflow_stack-as-exported-from-.patch
+	patches.kernel.org/6.6.17-098-blk-iocost-Fix-an-UBSAN-shift-out-of-bounds-wa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
