Input: atkbd - skip ATKBD_CMD_SETLEDS when skipping ATKBD_CMD_GETID (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3688,6 +3688,7 @@
 	patches.kernel.org/6.6.17-111-usb-dwc3-pci-add-support-for-the-Intel-Arrow-L.patch
 	patches.kernel.org/6.6.17-112-hrtimer-Report-offline-hrtimer-enqueue.patch
 	patches.kernel.org/6.6.17-113-Input-i8042-fix-strange-behavior-of-touchpad-o.patch
+	patches.kernel.org/6.6.17-114-Input-atkbd-skip-ATKBD_CMD_SETLEDS-when-skippi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
