riscv: Improve flush_tlb_kernel_range() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3661,6 +3661,7 @@
 	patches.kernel.org/6.6.17-084-fs-ntfs3-Fix-an-NULL-dereference-bug.patch
 	patches.kernel.org/6.6.17-085-riscv-Improve-tlb_flush.patch
 	patches.kernel.org/6.6.17-086-riscv-Make-__flush_tlb_range-loop-over-pte-ins.patch
+	patches.kernel.org/6.6.17-087-riscv-Improve-flush_tlb_kernel_range.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
