--- a/series.conf
+++ b/series.conf
@@ -3577,6 +3577,7 @@
 	patches.kernel.org/6.6.16-326-Linux-6.6.16.patch
 	patches.kernel.org/6.6.17-001-ext4-regenerate-buddy-after-block-freeing-fail.patch
 	patches.kernel.org/6.6.17-002-dmaengine-fsl-dpaa2-qdma-Fix-the-size-of-dma-p.patch
+	patches.kernel.org/6.6.17-003-dmaengine-ti-k3-udma-Report-short-packet-error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
