libceph: just wait for more data to be available on the socket (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3669,6 +3669,7 @@
 	patches.kernel.org/6.6.17-092-scsi-core-Move-scsi_host_busy-out-of-host-lock.patch
 	patches.kernel.org/6.6.17-093-riscv-Flush-the-tlb-when-a-page-directory-is-f.patch
 	patches.kernel.org/6.6.17-094-libceph-rename-read_sparse_msg_-to-read_partia.patch
+	patches.kernel.org/6.6.17-095-libceph-just-wait-for-more-data-to-be-availabl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
