--- a/series.conf
+++ b/series.conf
@@ -3677,6 +3677,7 @@
 	patches.kernel.org/6.6.17-100-ALSA-usb-audio-Add-a-quirk-for-Yamaha-YIT-W12T.patch
 	patches.kernel.org/6.6.17-101-ALSA-usb-audio-add-quirk-for-RODE-NT-USB.patch
 	patches.kernel.org/6.6.17-102-USB-serial-qcserial-add-new-usb-id-for-Dell-Wi.patch
+	patches.kernel.org/6.6.17-103-USB-serial-option-add-Fibocom-FM101-GL-variant.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
