tunnels: fix out of bounds access when building IPv6 PMTU error (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3631,6 +3631,7 @@
 	patches.kernel.org/6.6.17-054-selftests-net-fix-tcp-listener-handling-in-pmt.patch
 	patches.kernel.org/6.6.17-055-selftests-net-avoid-just-another-constant-wait.patch
 	patches.kernel.org/6.6.17-056-tsnep-Fix-mapping-for-zero-copy-XDP_TX-action.patch
+	patches.kernel.org/6.6.17-057-tunnels-fix-out-of-bounds-access-when-building.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
