rust: print: use explicit link in documentation (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3589,6 +3589,7 @@
 	patches.kernel.org/6.6.17-012-rust-arc-add-explicit-drop-around-Box-from_raw.patch
 	patches.kernel.org/6.6.17-013-rust-upgrade-to-Rust-1.72.1.patch
 	patches.kernel.org/6.6.17-014-rust-task-remove-redundant-explicit-link.patch
+	patches.kernel.org/6.6.17-015-rust-print-use-explicit-link-in-documentation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
