octeontx2-pf: Fix a memleak otx2_sq_init (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3633,6 +3633,7 @@
 	patches.kernel.org/6.6.17-056-tsnep-Fix-mapping-for-zero-copy-XDP_TX-action.patch
 	patches.kernel.org/6.6.17-057-tunnels-fix-out-of-bounds-access-when-building.patch
 	patches.kernel.org/6.6.17-058-atm-idt77252-fix-a-memleak-in-open_card_ubr0.patch
+	patches.kernel.org/6.6.17-059-octeontx2-pf-Fix-a-memleak-otx2_sq_init.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
