riscv: Improve tlb_flush() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3659,6 +3659,7 @@
 	patches.kernel.org/6.6.17-082-netfilter-nft_set_pipapo-add-helper-to-release.patch
 	patches.kernel.org/6.6.17-083-netfilter-nft_set_pipapo-remove-scratch_aligne.patch
 	patches.kernel.org/6.6.17-084-fs-ntfs3-Fix-an-NULL-dereference-bug.patch
+	patches.kernel.org/6.6.17-085-riscv-Improve-tlb_flush.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
