riscv: Make __flush_tlb_range() loop over pte instead of flushing the whole tlb (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3660,6 +3660,7 @@
 	patches.kernel.org/6.6.17-083-netfilter-nft_set_pipapo-remove-scratch_aligne.patch
 	patches.kernel.org/6.6.17-084-fs-ntfs3-Fix-an-NULL-dereference-bug.patch
 	patches.kernel.org/6.6.17-085-riscv-Improve-tlb_flush.patch
+	patches.kernel.org/6.6.17-086-riscv-Make-__flush_tlb_range-loop-over-pte-ins.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
