xfs: prevent rt growfs when quota is enabled (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3594,6 +3594,7 @@
 	patches.kernel.org/6.6.17-017-MAINTAINERS-add-Catherine-as-xfs-maintainer-fo.patch
 	patches.kernel.org/6.6.17-018-xfs-bump-max-fsgeom-struct-version.patch
 	patches.kernel.org/6.6.17-019-xfs-hoist-freeing-of-rt-data-fork-extent-mappi.patch
+	patches.kernel.org/6.6.17-020-xfs-prevent-rt-growfs-when-quota-is-enabled.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
