--- a/series.conf
+++ b/series.conf
@@ -3605,6 +3605,7 @@
 	patches.kernel.org/6.6.17-028-xfs-abort-intent-items-when-recovery-intents-f.patch
 	patches.kernel.org/6.6.17-029-xfs-only-remap-the-written-blocks-in-xfs_refli.patch
 	patches.kernel.org/6.6.17-030-xfs-up-ic_sema-if-flushing-data-device-fails.patch
+	patches.kernel.org/6.6.17-031-xfs-fix-internal-error-from-AGFL-exhaustion.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
