--- a/series.conf
+++ b/series.conf
@@ -3655,6 +3655,7 @@
 	patches.kernel.org/6.6.17-078-drm-amd-display-Add-NULL-test-for-timing-gener.patch
 	patches.kernel.org/6.6.17-079-drm-amd-display-Implement-bounds-check-for-str.patch
 	patches.kernel.org/6.6.17-080-netfilter-nft_ct-reject-direction-for-ct-id.patch
+	patches.kernel.org/6.6.17-081-netfilter-nft_set_pipapo-store-index-in-scratc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
