io_uring/poll: move poll execution helpers higher up (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3692,6 +3692,7 @@
 	patches.kernel.org/6.6.17-115-Revert-ASoC-amd-Add-new-dmi-entries-for-acp5x-.patch
 	patches.kernel.org/6.6.17-116-media-solo6x10-replace-max-a-min-b-c-by-clamp-.patch
 	patches.kernel.org/6.6.17-117-io_uring-net-fix-sr-len-for-IORING_OP_RECV-wit.patch
+	patches.kernel.org/6.6.17-118-io_uring-poll-move-poll-execution-helpers-high.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
