scsi: core: Move scsi_host_busy() out of host lock if it is for per-command (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3666,6 +3666,7 @@
 	patches.kernel.org/6.6.17-089-riscv-mm-execute-local-TLB-flush-after-populat.patch
 	patches.kernel.org/6.6.17-090-riscv-Fix-set_huge_pte_at-for-NAPOT-mapping.patch
 	patches.kernel.org/6.6.17-091-riscv-Fix-hugetlb_mask_last_page-when-NAPOT-is.patch
+	patches.kernel.org/6.6.17-092-scsi-core-Move-scsi_host_busy-out-of-host-lock.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
