inet: read sk->sk_family once in inet_recv_error() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3637,6 +3637,7 @@
 	patches.kernel.org/6.6.17-060-hwmon-aspeed-pwm-tacho-mutex-for-tach-reading.patch
 	patches.kernel.org/6.6.17-061-hwmon-coretemp-Fix-out-of-bounds-memory-access.patch
 	patches.kernel.org/6.6.17-062-hwmon-coretemp-Fix-bogus-core_id-to-attr-name-.patch
+	patches.kernel.org/6.6.17-063-inet-read-sk-sk_family-once-in-inet_recv_error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
