--- a/series.conf
+++ b/series.conf
@@ -3614,6 +3614,7 @@
 	patches.kernel.org/6.6.17-037-xfs-respect-the-stable-writes-flag-on-the-RT-d.patch
 	patches.kernel.org/6.6.17-038-drm-msms-dp-fixed-link-clock-divider-bits-be-o.patch
 	patches.kernel.org/6.6.17-039-drm-msm-dp-return-correct-Colorimetry-for-DP_T.patch
+	patches.kernel.org/6.6.17-040-drm-msm-dpu-check-for-valid-hw_pp-in-dpu_encod.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
