--- a/series.conf
+++ b/series.conf
@@ -3621,6 +3621,7 @@
 	patches.kernel.org/6.6.17-044-wifi-mac80211-fix-RCU-use-in-TDLS-fast-xmit.patch
 	patches.kernel.org/6.6.17-045-wifi-mac80211-fix-waiting-for-beacons-logic.patch
 	patches.kernel.org/6.6.17-046-wifi-iwlwifi-exit-eSR-only-after-the-FW-does.patch
+	patches.kernel.org/6.6.17-047-wifi-brcmfmac-Adjust-n_channels-usage-for-__co.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
