--- a/series.conf
+++ b/series.conf
@@ -3598,6 +3598,7 @@
 	patches.kernel.org/6.6.17-021-xfs-rt-stubs-should-return-negative-errnos-whe.patch
 	patches.kernel.org/6.6.17-022-xfs-fix-units-conversion-error-in-xfs_bmap_del.patch
 	patches.kernel.org/6.6.17-023-xfs-make-sure-maxlen-is-still-congruent-with-p.patch
+	patches.kernel.org/6.6.17-024-xfs-introduce-protection-for-drop-nlink.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
