usb: dwc3: host: Set XHCI_SG_TRB_CACHE_SIZE_QUIRK (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3681,6 +3681,7 @@
 	patches.kernel.org/6.6.17-104-USB-serial-cp210x-add-ID-for-IMST-iM871A-USB.patch
 	patches.kernel.org/6.6.17-105-Revert-usb-typec-tcpm-fix-cc-role-at-port-rese.patch
 	patches.kernel.org/6.6.17-106-x86-lib-Revert-to-_ASM_EXTABLE_UA-for-get-put-.patch
+	patches.kernel.org/6.6.17-107-usb-dwc3-host-Set-XHCI_SG_TRB_CACHE_SIZE_QUIRK.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
