xfs: rt stubs should return negative errnos when rt disabled (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3595,6 +3595,7 @@
 	patches.kernel.org/6.6.17-018-xfs-bump-max-fsgeom-struct-version.patch
 	patches.kernel.org/6.6.17-019-xfs-hoist-freeing-of-rt-data-fork-extent-mappi.patch
 	patches.kernel.org/6.6.17-020-xfs-prevent-rt-growfs-when-quota-is-enabled.patch
+	patches.kernel.org/6.6.17-021-xfs-rt-stubs-should-return-negative-errnos-whe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
