--- a/series.conf
+++ b/series.conf
@@ -3617,6 +3617,7 @@
 	patches.kernel.org/6.6.17-040-drm-msm-dpu-check-for-valid-hw_pp-in-dpu_encod.patch
 	patches.kernel.org/6.6.17-041-x86-efistub-Give-up-if-memory-attribute-protoc.patch
 	patches.kernel.org/6.6.17-042-x86-efistub-Avoid-placing-the-kernel-below-LOA.patch
+	patches.kernel.org/6.6.17-043-net-stmmac-xgmac-fix-handling-of-DPP-safety-er.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
