hwmon: (coretemp) Fix out-of-bounds memory access (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3635,6 +3635,7 @@
 	patches.kernel.org/6.6.17-058-atm-idt77252-fix-a-memleak-in-open_card_ubr0.patch
 	patches.kernel.org/6.6.17-059-octeontx2-pf-Fix-a-memleak-otx2_sq_init.patch
 	patches.kernel.org/6.6.17-060-hwmon-aspeed-pwm-tacho-mutex-for-tach-reading.patch
+	patches.kernel.org/6.6.17-061-hwmon-coretemp-Fix-out-of-bounds-memory-access.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
