riscv: mm: execute local TLB flush after populating vmemmap (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3663,6 +3663,7 @@
 	patches.kernel.org/6.6.17-086-riscv-Make-__flush_tlb_range-loop-over-pte-ins.patch
 	patches.kernel.org/6.6.17-087-riscv-Improve-flush_tlb_kernel_range.patch
 	patches.kernel.org/6.6.17-088-mm-Introduce-flush_cache_vmap_early.patch
+	patches.kernel.org/6.6.17-089-riscv-mm-execute-local-TLB-flush-after-populat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
