--- a/series.conf
+++ b/series.conf
@@ -3632,6 +3632,7 @@
 	patches.kernel.org/6.6.17-055-selftests-net-avoid-just-another-constant-wait.patch
 	patches.kernel.org/6.6.17-056-tsnep-Fix-mapping-for-zero-copy-XDP_TX-action.patch
 	patches.kernel.org/6.6.17-057-tunnels-fix-out-of-bounds-access-when-building.patch
+	patches.kernel.org/6.6.17-058-atm-idt77252-fix-a-memleak-in-open_card_ubr0.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
