--- a/series.conf
+++ b/series.conf
@@ -3604,6 +3604,7 @@
 	patches.kernel.org/6.6.17-027-xfs-factor-out-xfs_defer_pending_abort.patch
 	patches.kernel.org/6.6.17-028-xfs-abort-intent-items-when-recovery-intents-f.patch
 	patches.kernel.org/6.6.17-029-xfs-only-remap-the-written-blocks-in-xfs_refli.patch
+	patches.kernel.org/6.6.17-030-xfs-up-ic_sema-if-flushing-data-device-fails.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
