--- a/series.conf
+++ b/series.conf
@@ -3645,6 +3645,7 @@
 	patches.kernel.org/6.6.17-068-rxrpc-Fix-counting-of-new-acks-and-nacks.patch
 	patches.kernel.org/6.6.17-069-selftests-net-let-big_tcp-test-cope-with-slow-.patch
 	patches.kernel.org/6.6.17-070-tipc-Check-the-bearer-type-before-calling-tipc.patch
+	patches.kernel.org/6.6.17-071-af_unix-Call-kfree_skb-for-dead-unix_-sk-oob_s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
