ALSA: usb-audio: Add a quirk for Yamaha YIT-W12TX transmitter (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3674,6 +3674,7 @@
 	patches.kernel.org/6.6.17-097-riscv-declare-overflow_stack-as-exported-from-.patch
 	patches.kernel.org/6.6.17-098-blk-iocost-Fix-an-UBSAN-shift-out-of-bounds-wa.patch
 	patches.kernel.org/6.6.17-099-ALSA-usb-audio-Add-delay-quirk-for-MOTU-M-Seri.patch
+	patches.kernel.org/6.6.17-100-ALSA-usb-audio-Add-a-quirk-for-Yamaha-YIT-W12T.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
