ALSA: usb-audio: add quirk for RODE NT-USB+ (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3675,6 +3675,7 @@
 	patches.kernel.org/6.6.17-098-blk-iocost-Fix-an-UBSAN-shift-out-of-bounds-wa.patch
 	patches.kernel.org/6.6.17-099-ALSA-usb-audio-Add-delay-quirk-for-MOTU-M-Seri.patch
 	patches.kernel.org/6.6.17-100-ALSA-usb-audio-Add-a-quirk-for-Yamaha-YIT-W12T.patch
+	patches.kernel.org/6.6.17-101-ALSA-usb-audio-add-quirk-for-RODE-NT-USB.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
