xfs: make sure maxlen is still congruent with prod when rounding down (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3597,6 +3597,7 @@
 	patches.kernel.org/6.6.17-020-xfs-prevent-rt-growfs-when-quota-is-enabled.patch
 	patches.kernel.org/6.6.17-021-xfs-rt-stubs-should-return-negative-errnos-whe.patch
 	patches.kernel.org/6.6.17-022-xfs-fix-units-conversion-error-in-xfs_bmap_del.patch
+	patches.kernel.org/6.6.17-023-xfs-make-sure-maxlen-is-still-congruent-with-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
