--- a/series.conf
+++ b/series.conf
@@ -3627,6 +3627,7 @@
 	patches.kernel.org/6.6.17-050-selftests-net-cut-more-slack-for-gro-fwd-tests.patch
 	patches.kernel.org/6.6.17-051-selftests-net-convert-unicast_extensions.sh-to.patch
 	patches.kernel.org/6.6.17-052-selftests-net-convert-pmtu.sh-to-run-it-in-uni.patch
+	patches.kernel.org/6.6.17-053-selftests-net-change-shebang-to-bash-to-suppor.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
