x86/efistub: Give up if memory attribute protocol returns an error (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3615,6 +3615,7 @@
 	patches.kernel.org/6.6.17-038-drm-msms-dp-fixed-link-clock-divider-bits-be-o.patch
 	patches.kernel.org/6.6.17-039-drm-msm-dp-return-correct-Colorimetry-for-DP_T.patch
 	patches.kernel.org/6.6.17-040-drm-msm-dpu-check-for-valid-hw_pp-in-dpu_encod.patch
+	patches.kernel.org/6.6.17-041-x86-efistub-Give-up-if-memory-attribute-protoc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
