MAINTAINERS: add Catherine as xfs maintainer for 6.6.y (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3591,6 +3591,7 @@
 	patches.kernel.org/6.6.17-014-rust-task-remove-redundant-explicit-link.patch
 	patches.kernel.org/6.6.17-015-rust-print-use-explicit-link-in-documentation.patch
 	patches.kernel.org/6.6.17-016-rust-upgrade-to-Rust-1.73.0.patch
+	patches.kernel.org/6.6.17-017-MAINTAINERS-add-Catherine-as-xfs-maintainer-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
