--- a/blacklist.conf
+++ b/blacklist.conf
@@ -32,3 +32,4 @@ a2020be69490ee8778c59a02e7b270dfeecffbd4 # is patches.kernel.org/6.6.8-148-drm-a
 0dfc852b6fe3cbecbea67332a0dce2bebeba540d # holding back b/c 5790b1fb3d672d9a1fe3881a7181dfdbe741568f
 88903daecacf03b1e5636e1b5f18bda5b07030fc # holding back b/c 5790b1fb3d672d9a1fe3881a7181dfdbe741568f
 6c57d7b593c4a4e60db65d5ce0fe1d9f79ccbe9b # no drivers/firmware/qcom/qcom_qseecom_uefisecapp.c
+ebd4acc0cbeae9efea15993b11b05bd32942f3f0 # riscv
