- drm/gpuvm: allow building as module (jsc#PED-3527 jsc#PED-5475   jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120   jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069   jsc#PED-6071). - Update config files.   CONFIG_DRM_GPUVM=m - supported.conf: Add DRM_GPUVM as supported

--- a/series.conf
+++ b/series.conf
@@ -13190,6 +13190,7 @@
 	patches.suse/0180-drm-bridge-Add-200ms-delay-to-wait-FW-HPD-status-sta.patch
 	patches.suse/0181-drm-imx-dcss-Call-drm_atomic_helper_shutdown-at-shut.patch
 	patches.suse/0182-drm-gpuvm-rename-struct-drm_gpuva_manager-to-struct-.patch
+	patches.suse/0183-drm-gpuvm-allow-building-as-module.patch
 	patches.suse/drm-rockchip-cdn-dp-Fix-some-error-handling-paths-in.patch
 	patches.suse/drm-panel-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-panel-panel-tpo-tpg110-fix-a-possible-null-point.patch
