--- a/supported.conf
+++ b/supported.conf
@@ -1065,6 +1065,7 @@
 		drivers/gpu/drm/drm_dp_aux_bus
 		drivers/gpu/drm/drm_dp_helper
 		drivers/gpu/drm/drm_exec
+		drivers/gpu/drm/drm_gpuvm
 		drivers/gpu/drm/drm_kms_helper
 -		drivers/gpu/drm/drm_mipi_dbi
 		drivers/gpu/drm/drm_panel_orientation_quirks
