- fbdev: Provide I/O-memory helpers as module (jsc#PED-3527   jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120   jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069   jsc#PED-6071). - Update config files.   CONFIG_FB_IOMEM_FOPS=m - supported.conf: Add fb_io_fops as supported

--- a/supported.conf
+++ b/supported.conf
@@ -5243,6 +5243,7 @@
 +base		drivers/video/fbdev/core/cfbfillrect
 +base		drivers/video/fbdev/core/cfbimgblt
 		drivers/video/fbdev/core/fb
+		drivers/video/fbdev/core/fb_io_fops
 		drivers/video/fbdev/core/fb_sys_fops
 		drivers/video/fbdev/core/syscopyarea
 		drivers/video/fbdev/core/sysfillrect
