--- a/series.conf
+++ b/series.conf
@@ -14397,6 +14397,7 @@
 	patches.suse/1385-drm-bridge-synopsys-dw-mipi-dsi-Use-pixel-clock-rate.patch
 	patches.suse/1386-drm-bridge-synopsys-dw-mipi-dsi-Set-minimum-lane-byt.patch
 	patches.suse/1387-drm-bridge-synopsys-dw-mipi-dsi-Disable-HSTX-and-LPR.patch
+	patches.suse/1388-drm-bridge-imx-Add-i.MX93-MIPI-DSI-support.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
 	patches.suse/drm-rockchip-Fix-type-promotion-bug-in-rockchip_gem_.patch
 	patches.suse/drm-rockchip-remove-unused-struct-in-vop2.patch
