--- a/series.conf
+++ b/series.conf
@@ -16680,6 +16680,7 @@
 	patches.suse/dmaengine-fsl-qdma-Fix-a-memory-leak-related-to-the-.patch
 	patches.suse/dmaengine-fsl-qdma-Fix-a-memory-leak-related-to-the--3aa58cb.patch
 	patches.suse/dmaengine-fix-is_slave_direction-return-false-when-D.patch
+	patches.suse/usb-dwc3-host-Set-XHCI_SG_TRB_CACHE_SIZE_QUIRK.patch
 	patches.suse/usb-host-xhci-plat-Add-support-for-XHCI_SG_TRB_CACHE.patch
 	patches.suse/xhci-fix-off-by-one-check-when-adding-a-secondary-in.patch
 	patches.suse/usb-core-Prevent-null-pointer-dereference-in-update_.patch
