--- a/series.conf
+++ b/series.conf
@@ -16696,6 +16696,7 @@
 	patches.suse/usb-ucsi_acpi-Fix-command-completion-handling.patch
 	patches.suse/usb-typec-tcpm-fix-the-PD-disabled-case.patch
 	patches.suse/USB-serial-cp210x-add-ID-for-IMST-iM871A-USB.patch
+	patches.suse/USB-serial-qcserial-add-new-usb-id-for-Dell-Wireless.patch
 	patches.suse/serial-max310x-set-default-value-when-reading-clock-.patch
 	patches.suse/serial-max310x-improve-crystal-stable-clock-detectio.patch
 	patches.suse/serial-max310x-fail-probe-if-clock-crystal-is-unstab.patch
