--- a/series.conf
+++ b/series.conf
@@ -16683,6 +16683,7 @@
 	patches.suse/usb-dwc3-host-Set-XHCI_SG_TRB_CACHE_SIZE_QUIRK.patch
 	patches.suse/usb-host-xhci-plat-Add-support-for-XHCI_SG_TRB_CACHE.patch
 	patches.suse/xhci-fix-off-by-one-check-when-adding-a-secondary-in.patch
+	patches.suse/xhci-process-isoc-TD-properly-when-there-was-a-trans.patch
 	patches.suse/usb-core-Prevent-null-pointer-dereference-in-update_.patch
 	patches.suse/usb-dwc3-gadget-Fix-NULL-pointer-dereference-in-dwc3.patch
 	patches.suse/usb-chipidea-core-handle-power-lost-in-workqueue.patch
