ASoC: SOF: IPC3: fix message bounds on ipc ops (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16745,6 +16745,7 @@
 	patches.suse/ASoC-SOF-ipc3-topology-Fix-pipeline-tear-down-logic.patch
 	patches.suse/ASoC-rt5645-Fix-deadlock-in-rt5645_jack_detect_work.patch
 	patches.suse/ASoC-q6dsp-fix-event-handler-prototype.patch
+	patches.suse/ASoC-SOF-IPC3-fix-message-bounds-on-ipc-ops.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
