selftests/net: convert unicast_extensions.sh to run it in unique namespace (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -15576,6 +15576,7 @@
 	patches.suse/ice-periodically-kick-Tx-timestamp-interrupt.patch
 	patches.suse/ice-Rename-E822-to-E82X.patch
 	patches.suse/selftests-net-specify-the-interface-when-do-arping.patch
+	patches.suse/selftests-net-convert-unicast_extensions.sh-to-run-i.patch
 	patches.suse/sfc-Implement-ndo_hwtstamp_-get-set.patch
 	patches.suse/sfc-siena-Implement-ndo_hwtstamp_-get-set.patch
 	patches.suse/octeon_ep-control-net-API-framework-to-support-offlo.patch
