ALSA: hda/cs35l56: select intended config FW_CS_DSP (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16736,6 +16736,7 @@
 	patches.suse/scsi-lpfc-Use-unsigned-type-for-num_sge.patch
 	patches.suse/nvme-host-fix-the-updating-of-the-firmware-version.patch
 	patches.suse/x86-Kconfig-Transmeta-Crusoe-is-CPU-family-5-not-6.patch
+	patches.suse/ALSA-hda-cs35l56-select-intended-config-FW_CS_DSP.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
