usb: dwc3: pci: add support for the Intel Arrow Lake-H (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16686,6 +16686,7 @@
 	patches.suse/xhci-process-isoc-TD-properly-when-there-was-a-trans.patch
 	patches.suse/xhci-handle-isoc-Babble-and-Buffer-Overrun-events-pr.patch
 	patches.suse/usb-core-Prevent-null-pointer-dereference-in-update_.patch
+	patches.suse/usb-dwc3-pci-add-support-for-the-Intel-Arrow-Lake-H.patch
 	patches.suse/usb-dwc3-gadget-Fix-NULL-pointer-dereference-in-dwc3.patch
 	patches.suse/usb-chipidea-core-handle-power-lost-in-workqueue.patch
 	patches.suse/USB-hub-check-for-alternate-port-before-enabling-A_A.patch
