ASoC: SOF: ipc3-topology: Fix pipeline tear down logic (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16742,6 +16742,7 @@
 	patches.suse/ASoC-cs35l56-fix-reversed-if-statement-in-cs35l56_ds.patch
 	patches.suse/ASoC-tas2781-add-module-parameter-to-tascodec_init.patch
 	patches.suse/ASoC-cs35l56-Fix-deadlock-in-ASP1-mixer-register-ini.patch
+	patches.suse/ASoC-SOF-ipc3-topology-Fix-pipeline-tear-down-logic.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
