ASoC: tas2781: add module parameter to tascodec_init() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16740,6 +16740,7 @@
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-device-ID-model-name.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-order-and-duplicates-in.patch
 	patches.suse/ASoC-cs35l56-fix-reversed-if-statement-in-cs35l56_ds.patch
+	patches.suse/ASoC-tas2781-add-module-parameter-to-tascodec_init.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
