xhci: handle isoc Babble and Buffer Overrun events properly (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16684,6 +16684,7 @@
 	patches.suse/usb-host-xhci-plat-Add-support-for-XHCI_SG_TRB_CACHE.patch
 	patches.suse/xhci-fix-off-by-one-check-when-adding-a-secondary-in.patch
 	patches.suse/xhci-process-isoc-TD-properly-when-there-was-a-trans.patch
+	patches.suse/xhci-handle-isoc-Babble-and-Buffer-Overrun-events-pr.patch
 	patches.suse/usb-core-Prevent-null-pointer-dereference-in-update_.patch
 	patches.suse/usb-dwc3-gadget-Fix-NULL-pointer-dereference-in-dwc3.patch
 	patches.suse/usb-chipidea-core-handle-power-lost-in-workqueue.patch
