ALSA: hda/realtek: cs35l41: Fix order and duplicates in quirks table (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16738,6 +16738,7 @@
 	patches.suse/x86-Kconfig-Transmeta-Crusoe-is-CPU-family-5-not-6.patch
 	patches.suse/ALSA-hda-cs35l56-select-intended-config-FW_CS_DSP.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-device-ID-model-name.patch
+	patches.suse/ALSA-hda-realtek-cs35l41-Fix-order-and-duplicates-in.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
