--- a/series.conf
+++ b/series.conf
@@ -16724,6 +16724,7 @@
 	patches.suse/wifi-mac80211-fix-RCU-use-in-TDLS-fast-xmit.patch
 	patches.suse/wifi-mac80211-fix-waiting-for-beacons-logic.patch
 	patches.suse/wifi-iwlwifi-exit-eSR-only-after-the-FW-does.patch
+	patches.suse/wifi-brcmfmac-Adjust-n_channels-usage-for-__counted_.patch
 	patches.suse/octeontx2-af-Initialize-maps.patch
 	patches.suse/s390-qeth-Fix-potential-loss-of-L3-IP-in-case-of-network-issues.patch
 	patches.suse/drm-i915-gvt-Fix-uninitialized-variable-in-handle_mm.patch
