ASoC: cs35l56: Fix deadlock in ASP1 mixer register initialization (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16741,6 +16741,7 @@
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-order-and-duplicates-in.patch
 	patches.suse/ASoC-cs35l56-fix-reversed-if-statement-in-cs35l56_ds.patch
 	patches.suse/ASoC-tas2781-add-module-parameter-to-tascodec_init.patch
+	patches.suse/ASoC-cs35l56-Fix-deadlock-in-ASP1-mixer-register-ini.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
