--- a/series.conf
+++ b/series.conf
@@ -15719,6 +15719,7 @@
 	patches.suse/ice-cleanup-inconsistent-code.patch
 	patches.suse/idpf-refactor-some-missing-field-get-prep-conversion.patch
 	patches.suse/octeontx2-af-Fix-a-double-free-issue.patch
+	patches.suse/selftests-net-convert-pmtu.sh-to-run-it-in-unique-na.patch
 	patches.suse/net-mlx5e-Use-the-correct-lag-ports-number-when-crea.patch
 	patches.suse/net-mlx5-Fix-query-of-sd_group-field.patch
 	patches.suse/net-mlx5-SD-Introduce-SD-lib.patch
