--- a/series.conf
+++ b/series.conf
@@ -16739,6 +16739,7 @@
 	patches.suse/ALSA-hda-cs35l56-select-intended-config-FW_CS_DSP.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-device-ID-model-name.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-order-and-duplicates-in.patch
+	patches.suse/ASoC-cs35l56-fix-reversed-if-statement-in-cs35l56_ds.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
