--- a/series.conf
+++ b/series.conf
@@ -16744,6 +16744,7 @@
 	patches.suse/ASoC-cs35l56-Fix-deadlock-in-ASP1-mixer-register-ini.patch
 	patches.suse/ASoC-SOF-ipc3-topology-Fix-pipeline-tear-down-logic.patch
 	patches.suse/ASoC-rt5645-Fix-deadlock-in-rt5645_jack_detect_work.patch
+	patches.suse/ASoC-q6dsp-fix-event-handler-prototype.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
