ALSA: hda/realtek: fix mute/micmute LED For HP mt645 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16749,6 +16749,7 @@
 	patches.suse/ASoC-rt5645-Fix-deadlock-in-rt5645_jack_detect_work.patch
 	patches.suse/ASoC-q6dsp-fix-event-handler-prototype.patch
 	patches.suse/ASoC-SOF-IPC3-fix-message-bounds-on-ipc-ops.patch
+	patches.suse/ALSA-hda-realtek-fix-mute-micmute-LED-For-HP-mt645.patch
 	patches.suse/ALSA-usb-audio-More-relaxed-check-of-MIDI-jack-names.patch
 
 	# jejb/scsi for-next
