--- a/series.conf
+++ b/series.conf
@@ -16736,6 +16736,7 @@
 	patches.suse/scsi-lpfc-Use-unsigned-type-for-num_sge.patch
 	patches.suse/nvme-host-fix-the-updating-of-the-firmware-version.patch
 	patches.suse/x86-Kconfig-Transmeta-Crusoe-is-CPU-family-5-not-6.patch
+	patches.suse/ALSA-hda-conexant-Add-quirk-for-SWS-JS201D.patch
 	patches.suse/ALSA-hda-cs35l56-select-intended-config-FW_CS_DSP.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-device-ID-model-name.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-order-and-duplicates-in.patch
