--- a/series.conf
+++ b/series.conf
@@ -16743,6 +16743,7 @@
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-order-and-duplicates-in.patch
 	patches.suse/ASoC-cs35l56-fix-reversed-if-statement-in-cs35l56_ds.patch
 	patches.suse/ASoC-tas2781-add-module-parameter-to-tascodec_init.patch
+	patches.suse/ASoC-amd-yc-Add-DMI-quirk-for-Lenovo-Ideapad-Pro-5-1.patch
 	patches.suse/ASoC-cs35l56-Fix-deadlock-in-ASP1-mixer-register-ini.patch
 	patches.suse/ASoC-SOF-ipc3-topology-Fix-pipeline-tear-down-logic.patch
 	patches.suse/ASoC-rt5645-Fix-deadlock-in-rt5645_jack_detect_work.patch
