--- a/series.conf
+++ b/series.conf
@@ -16642,6 +16642,7 @@
 	patches.suse/ALSA-hda-realtek-Fix-the-external-mic-not-being-reco.patch
 	patches.suse/ALSA-hda-realtek-Enable-Mute-LED-on-HP-Laptop-14-fq0.patch
 	patches.suse/ALSA-hda-cs35l41-Support-additional-ASUS-Zenbook-UX3.patch
+	patches.suse/ALSA-hda-cs35l41-Support-ASUS-Zenbook-UM3402YAR.patch
 	patches.suse/ALSA-hda-realtek-Apply-headset-jack-quirk-for-non-ba.patch
 	patches.suse/ASoC-codecs-wcd938x-fix-headphones-volume-controls.patch
 	patches.suse/ASoC-codecs-wcd938x-handle-deferred-probe.patch
