ALSA: hda/realtek: cs35l41: Add internal speaker support for ASUS UM3402 with missing DSD (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16746,6 +16746,7 @@
 	patches.suse/ALSA-hda-realtek-add-IDs-for-Dell-dual-spk-platform.patch
 	patches.suse/ALSA-hda-cs35l56-select-intended-config-FW_CS_DSP.patch
 	patches.suse/ALSA-hda-Add-Lenovo-Legion-7i-gen7-sound-quirk.patch
+	patches.suse/ALSA-hda-realtek-cs35l41-Add-internal-speaker-suppor.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-device-ID-model-name.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-order-and-duplicates-in.patch
 	patches.suse/ASoC-cs35l56-fix-reversed-if-statement-in-cs35l56_ds.patch
