--- a/series.conf
+++ b/series.conf
@@ -16470,6 +16470,7 @@
 	patches.suse/nouveau-vmm-don-t-set-addr-on-the-fail-path-to-avoid.patch
 	patches.suse/ALSA-oxygen-Fix-right-channel-of-capture-volume-mixe.patch
 	patches.suse/ALSA-hda-Properly-setup-HDMI-stream.patch
+	patches.suse/ALSA-hda-generic-Remove-obsolete-call-to-ledtrig_aud.patch
 	patches.suse/ALSA-hda-relatek-Enable-Mute-LED-on-HP-Laptop-15s-fq-bc7863d.patch
 	patches.suse/ALSA-hda-realtek-Enable-mute-micmute-LEDs-and-limit-.patch
 	patches.suse/ASoC-mediatek-sof-common-Add-NULL-check-for-normal_l.patch
