--- a/series.conf
+++ b/series.conf
@@ -16630,6 +16630,7 @@
 	patches.suse/drm-tegra-Do-not-assume-that-a-NULL-domain-means-no-DMA-IOMMU
 	patches.suse/powerpc-iommu-Bring-back-table-group-release_ownership-call
 	patches.suse/ALSA-hda-realtek-fix-mute-micmute-LEDs-for-HP-ZBook-.patch
+	patches.suse/ALSA-hda-Replace-numeric-device-IDs-with-constant-va.patch
 	patches.suse/ALSA-hda-cs8409-Suppress-vmaster-control-for-Dolphin.patch
 	patches.suse/ALSA-usb-audio-Add-a-quirk-for-Yamaha-YIT-W12TX-tran.patch
 	patches.suse/ALSA-hda-realtek-Add-speaker-pin-verbtable-for-Dell-.patch
