--- a/series.conf
+++ b/series.conf
@@ -16631,6 +16631,7 @@
 	patches.suse/powerpc-iommu-Bring-back-table-group-release_ownership-call
 	patches.suse/ALSA-hda-realtek-fix-mute-micmute-LEDs-for-HP-ZBook-.patch
 	patches.suse/ALSA-hda-Replace-numeric-device-IDs-with-constant-va.patch
+	patches.suse/ALSA-hda-Increase-default-bdl_pos_adj-for-Apollo-Lak.patch
 	patches.suse/ALSA-hda-cs8409-Suppress-vmaster-control-for-Dolphin.patch
 	patches.suse/ALSA-usb-audio-Add-a-quirk-for-Yamaha-YIT-W12TX-tran.patch
 	patches.suse/ALSA-hda-realtek-Add-speaker-pin-verbtable-for-Dell-.patch
