--- a/series.conf
+++ b/series.conf
@@ -45121,6 +45121,7 @@
 	patches.suse/ALSA-usb-audio-Add-a-quirk-for-Yamaha-YIT-W12TX-tran.patch
 	patches.suse/ALSA-usb-audio-Add-delay-quirk-for-MOTU-M-Series-2nd.patch
 	patches.suse/ALSA-usb-audio-add-quirk-for-RODE-NT-USB.patch
+	patches.suse/ALSA-usb-audio-Sort-quirk-table-entries.patch
 	patches.suse/ASoC-codecs-wcd938x-fix-headphones-volume-controls.patch
 	patches.suse/ASoC-codecs-wcd938x-handle-deferred-probe.patch
 	patches.suse/ASoC-codecs-lpass-wsa-macro-fix-compander-volume-hac.patch
