ALSA: usb-audio: More relaxed check of MIDI jack names (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45147,6 +45147,7 @@
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-order-and-duplicates-in.patch
 	patches.suse/ASoC-rt5645-Fix-deadlock-in-rt5645_jack_detect_work.patch
 	patches.suse/ASoC-SOF-IPC3-fix-message-bounds-on-ipc-ops.patch
+	patches.suse/ALSA-usb-audio-More-relaxed-check-of-MIDI-jack-names.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
