--- a/series.conf
+++ b/series.conf
@@ -45118,6 +45118,7 @@
 	patches.suse/nfc-nci-free-rx_data_reassembly-skb-on-NCI-device-cl.patch
 	patches.suse/nvme-rdma-Fix-transfer-length-when-write_generate-re.patch
 	patches.suse/ALSA-hda-cs8409-Suppress-vmaster-control-for-Dolphin.patch
+	patches.suse/ALSA-usb-audio-Add-a-quirk-for-Yamaha-YIT-W12TX-tran.patch
 	patches.suse/ASoC-codecs-wcd938x-fix-headphones-volume-controls.patch
 	patches.suse/ASoC-codecs-wcd938x-handle-deferred-probe.patch
 	patches.suse/ASoC-codecs-lpass-wsa-macro-fix-compander-volume-hac.patch
