--- a/series.conf
+++ b/series.conf
@@ -45120,6 +45120,7 @@
 	patches.suse/ALSA-hda-cs8409-Suppress-vmaster-control-for-Dolphin.patch
 	patches.suse/ALSA-usb-audio-Add-a-quirk-for-Yamaha-YIT-W12TX-tran.patch
 	patches.suse/ALSA-usb-audio-Add-delay-quirk-for-MOTU-M-Series-2nd.patch
+	patches.suse/ALSA-usb-audio-add-quirk-for-RODE-NT-USB.patch
 	patches.suse/ASoC-codecs-wcd938x-fix-headphones-volume-controls.patch
 	patches.suse/ASoC-codecs-wcd938x-handle-deferred-probe.patch
 	patches.suse/ASoC-codecs-lpass-wsa-macro-fix-compander-volume-hac.patch
