--- a/series.conf
+++ b/series.conf
@@ -45144,6 +45144,7 @@
 	patches.suse/serial-max310x-fail-probe-if-clock-crystal-is-unstab.patch
 	patches.suse/misc-fastrpc-Mark-all-sessions-as-invalid-in-cb_remo.patch
 	patches.suse/crypto-ccp-Fix-null-pointer-dereference-in-__sev_pla.patch
+	patches.suse/atm-idt77252-fix-a-memleak-in-open_card_ubr0.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-device-ID-model-name.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-order-and-duplicates-in.patch
 	patches.suse/ASoC-rt5645-Fix-deadlock-in-rt5645_jack_detect_work.patch
