wifi: iwlwifi: uninitialized variable in iwl_acpi_get_ppag_table() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45157,6 +45157,7 @@
 	patches.suse/spi-ppc4xx-Drop-write-only-variable.patch
 	patches.suse/spi-mxs-Fix-chipselect-glitch.patch
 	patches.suse/wifi-iwlwifi-Fix-some-error-codes.patch
+	patches.suse/wifi-iwlwifi-uninitialized-variable-in-iwl_acpi_get_.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-device-ID-model-name.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-order-and-duplicates-in.patch
 	patches.suse/ASoC-rt5645-Fix-deadlock-in-rt5645_jack_detect_work.patch
