--- a/series.conf
+++ b/series.conf
@@ -45149,6 +45149,7 @@
 	patches.suse/drm-msms-dp-fixed-link-clock-divider-bits-be-over-wr.patch
 	patches.suse/drm-msm-dp-return-correct-Colorimetry-for-DP_TEST_DY.patch
 	patches.suse/drm-msm-dpu-check-for-valid-hw_pp-in-dpu_encoder_hel.patch
+	patches.suse/hwmon-aspeed-pwm-tacho-mutex-for-tach-reading.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-device-ID-model-name.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-order-and-duplicates-in.patch
 	patches.suse/ASoC-rt5645-Fix-deadlock-in-rt5645_jack_detect_work.patch
