--- a/series.conf
+++ b/series.conf
@@ -45163,6 +45163,7 @@
 	patches.suse/drm-crtc-fix-uninitialized-variable-use-even-harder.patch
 	patches.suse/drm-amd-display-Fix-possible-buffer-overflow-in-find.patch
 	patches.suse/Revert-drm-amd-flush-any-delayed-gfxoff-on-suspend-e.patch
+	patches.suse/drm-amd-display-Fix-possible-NULL-dereference-on-dev.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-device-ID-model-name.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-order-and-duplicates-in.patch
 	patches.suse/ASoC-rt5645-Fix-deadlock-in-rt5645_jack_detect_work.patch
