drm/msms/dp: fixed link clock divider bits be over written in BPC unknown case (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45146,6 +45146,7 @@
 	patches.suse/crypto-ccp-Fix-null-pointer-dereference-in-__sev_pla.patch
 	patches.suse/atm-idt77252-fix-a-memleak-in-open_card_ubr0.patch
 	patches.suse/drm-i915-gvt-Fix-uninitialized-variable-in-handle_mm.patch
+	patches.suse/drm-msms-dp-fixed-link-clock-divider-bits-be-over-wr.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-device-ID-model-name.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-order-and-duplicates-in.patch
 	patches.suse/ASoC-rt5645-Fix-deadlock-in-rt5645_jack_detect_work.patch
