can: j1939: Fix UAF in j1939_sk_match_filter during setsockopt(SO_J1939_FILTER) (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45158,6 +45158,7 @@
 	patches.suse/spi-mxs-Fix-chipselect-glitch.patch
 	patches.suse/wifi-iwlwifi-Fix-some-error-codes.patch
 	patches.suse/wifi-iwlwifi-uninitialized-variable-in-iwl_acpi_get_.patch
+	patches.suse/can-j1939-Fix-UAF-in-j1939_sk_match_filter-during-se.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-device-ID-model-name.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-order-and-duplicates-in.patch
 	patches.suse/ASoC-rt5645-Fix-deadlock-in-rt5645_jack_detect_work.patch
