HID: wacom: generic: Avoid reporting a serial of '0' to userspace (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45153,6 +45153,7 @@
 	patches.suse/hwmon-coretemp-Fix-out-of-bounds-memory-access.patch
 	patches.suse/hwmon-coretemp-Fix-bogus-core_id-to-attr-name-mappin.patch
 	patches.suse/HID-wacom-Do-not-register-input-devices-until-after-.patch
+	patches.suse/HID-wacom-generic-Avoid-reporting-a-serial-of-0-to-u.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-device-ID-model-name.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-order-and-duplicates-in.patch
 	patches.suse/ASoC-rt5645-Fix-deadlock-in-rt5645_jack_detect_work.patch
