--- a/series.conf
+++ b/series.conf
@@ -45155,6 +45155,7 @@
 	patches.suse/HID-wacom-Do-not-register-input-devices-until-after-.patch
 	patches.suse/HID-wacom-generic-Avoid-reporting-a-serial-of-0-to-u.patch
 	patches.suse/spi-ppc4xx-Drop-write-only-variable.patch
+	patches.suse/spi-mxs-Fix-chipselect-glitch.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-device-ID-model-name.patch
 	patches.suse/ALSA-hda-realtek-cs35l41-Fix-order-and-duplicates-in.patch
 	patches.suse/ASoC-rt5645-Fix-deadlock-in-rt5645_jack_detect_work.patch
