--- a/series.conf
+++ b/series.conf
@@ -16774,6 +16774,7 @@
 	patches.suse/iio-accel-bma400-Fix-a-compilation-problem.patch
 	patches.suse/iio-adc-ad4130-zero-initialize-clock-init-data.patch
 	patches.suse/iio-adc-ad4130-only-set-GPIO_CTRL-if-pin-is-unused.patch
+	patches.suse/driver-core-Fix-device_link_flag_is_sync_state_only.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
