iio: pressure: bmp280: Add missing bmp085 to SPI id table (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16764,6 +16764,7 @@
 	patches.suse/media-ir_toy-fix-a-memleak-in-irtoy_tx.patch
 	patches.suse/thunderbolt-Fix-setting-the-CNS-bit-in-ROUTER_CS_5.patch
 	patches.suse/iio-core-fix-memleak-in-iio_device_register_sysfs.patch
+	patches.suse/iio-pressure-bmp280-Add-missing-bmp085-to-SPI-id-tab.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
