iio: imu: bno055: serdev requires REGMAP (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16766,6 +16766,7 @@
 	patches.suse/iio-core-fix-memleak-in-iio_device_register_sysfs.patch
 	patches.suse/iio-pressure-bmp280-Add-missing-bmp085-to-SPI-id-tab.patch
 	patches.suse/iio-magnetometer-rm3100-add-boundary-check-for-the-v.patch
+	patches.suse/iio-imu-bno055-serdev-requires-REGMAP.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
