--- a/series.conf
+++ b/series.conf
@@ -16772,6 +16772,7 @@
 	patches.suse/staging-iio-ad5933-fix-type-mismatch-regression.patch
 	patches.suse/iio-commom-st_sensors-ensure-proper-DMA-alignment.patch
 	patches.suse/iio-accel-bma400-Fix-a-compilation-problem.patch
+	patches.suse/iio-adc-ad4130-zero-initialize-clock-init-data.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
