--- a/series.conf
+++ b/series.conf
@@ -16771,6 +16771,7 @@
 	patches.suse/iio-adc-ad_sigma_delta-ensure-proper-DMA-alignment.patch
 	patches.suse/staging-iio-ad5933-fix-type-mismatch-regression.patch
 	patches.suse/iio-commom-st_sensors-ensure-proper-DMA-alignment.patch
+	patches.suse/iio-accel-bma400-Fix-a-compilation-problem.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
