iio: imu: adis: ensure proper DMA alignment (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16767,6 +16767,7 @@
 	patches.suse/iio-pressure-bmp280-Add-missing-bmp085-to-SPI-id-tab.patch
 	patches.suse/iio-magnetometer-rm3100-add-boundary-check-for-the-v.patch
 	patches.suse/iio-imu-bno055-serdev-requires-REGMAP.patch
+	patches.suse/iio-imu-adis-ensure-proper-DMA-alignment.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
