iio: magnetometer: rm3100: add boundary check for the value read from RM3100_REG_TMRC (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16765,6 +16765,7 @@
 	patches.suse/thunderbolt-Fix-setting-the-CNS-bit-in-ROUTER_CS_5.patch
 	patches.suse/iio-core-fix-memleak-in-iio_device_register_sysfs.patch
 	patches.suse/iio-pressure-bmp280-Add-missing-bmp085-to-SPI-id-tab.patch
+	patches.suse/iio-magnetometer-rm3100-add-boundary-check-for-the-v.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
