media: ir_toy: fix a memleak in irtoy_tx (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16761,6 +16761,7 @@
 	patches.suse/ALSA-hda-realtek-fix-mute-micmute-LED-For-HP-mt645.patch
 	patches.suse/ALSA-usb-audio-More-relaxed-check-of-MIDI-jack-names.patch
 	patches.suse/media-Revert-media-rkisp1-Drop-IRQF_SHARED.patch
+	patches.suse/media-ir_toy-fix-a-memleak-in-irtoy_tx.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
