--- a/series.conf
+++ b/series.conf
@@ -16768,6 +16768,7 @@
 	patches.suse/iio-magnetometer-rm3100-add-boundary-check-for-the-v.patch
 	patches.suse/iio-imu-bno055-serdev-requires-REGMAP.patch
 	patches.suse/iio-imu-adis-ensure-proper-DMA-alignment.patch
+	patches.suse/iio-adc-ad_sigma_delta-ensure-proper-DMA-alignment.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
