driver core: fw_devlink: Improve detection of overlapping cycles (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16775,6 +16775,7 @@
 	patches.suse/iio-adc-ad4130-zero-initialize-clock-init-data.patch
 	patches.suse/iio-adc-ad4130-only-set-GPIO_CTRL-if-pin-is-unused.patch
 	patches.suse/driver-core-Fix-device_link_flag_is_sync_state_only.patch
+	patches.suse/driver-core-fw_devlink-Improve-detection-of-overlapp.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
