--- a/series.conf
+++ b/series.conf
@@ -16769,6 +16769,7 @@
 	patches.suse/iio-imu-bno055-serdev-requires-REGMAP.patch
 	patches.suse/iio-imu-adis-ensure-proper-DMA-alignment.patch
 	patches.suse/iio-adc-ad_sigma_delta-ensure-proper-DMA-alignment.patch
+	patches.suse/staging-iio-ad5933-fix-type-mismatch-regression.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
