media: Revert "media: rkisp1: Drop IRQF_SHARED" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16760,6 +16760,7 @@
 	patches.suse/ASoC-SOF-IPC3-fix-message-bounds-on-ipc-ops.patch
 	patches.suse/ALSA-hda-realtek-fix-mute-micmute-LED-For-HP-mt645.patch
 	patches.suse/ALSA-usb-audio-More-relaxed-check-of-MIDI-jack-names.patch
+	patches.suse/media-Revert-media-rkisp1-Drop-IRQF_SHARED.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
