thunderbolt: Fix setting the CNS bit in ROUTER_CS_5 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16762,6 +16762,7 @@
 	patches.suse/ALSA-usb-audio-More-relaxed-check-of-MIDI-jack-names.patch
 	patches.suse/media-Revert-media-rkisp1-Drop-IRQF_SHARED.patch
 	patches.suse/media-ir_toy-fix-a-memleak-in-irtoy_tx.patch
+	patches.suse/thunderbolt-Fix-setting-the-CNS-bit-in-ROUTER_CS_5.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
