--- a/series.conf
+++ b/series.conf
@@ -16763,6 +16763,7 @@
 	patches.suse/media-Revert-media-rkisp1-Drop-IRQF_SHARED.patch
 	patches.suse/media-ir_toy-fix-a-memleak-in-irtoy_tx.patch
 	patches.suse/thunderbolt-Fix-setting-the-CNS-bit-in-ROUTER_CS_5.patch
+	patches.suse/iio-core-fix-memleak-in-iio_device_register_sysfs.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
