--- a/series.conf
+++ b/series.conf
@@ -16773,6 +16773,7 @@
 	patches.suse/iio-commom-st_sensors-ensure-proper-DMA-alignment.patch
 	patches.suse/iio-accel-bma400-Fix-a-compilation-problem.patch
 	patches.suse/iio-adc-ad4130-zero-initialize-clock-init-data.patch
+	patches.suse/iio-adc-ad4130-only-set-GPIO_CTRL-if-pin-is-unused.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
