--- a/series.conf
+++ b/series.conf
@@ -16692,6 +16692,7 @@
 	patches.suse/scsi-hisi_sas-Start-delivery-hisi_sas_task_exec-directly.patch
 	patches.suse/scsi-hisi_sas-Pass-abort-structure-for-internal-abort.patch
 	patches.suse/scsi-hisi_sas-Factor-out-task-prep-and-delivery-code.patch
+	patches.suse/scsi-hisi_sas-Prevent-parallel-FLR-and-controller-reset.patch
 	patches.suse/scsi-libsas-Don-t-always-drain-event-workqueue-for-HA-resume.patch
 	patches.suse/scsi-Revert-scsi-hisi_sas-Filter-out-new-PHY-up-events-during-suspend
 	patches.suse/scsi-block-pm-Always-set-request-queue-runtime-active-in-blk_post_runtime_resume.patch
