xfs: bump max fsgeom struct version (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14042,6 +14042,7 @@
 	patches.suse/drm-amdgpu-fix-GRBM-read-timeout-when-do-mes_self_te.patch
 	patches.suse/cpupower-fix-reference-to-nonexistent-document.patch
 	patches.suse/s390-ap-fix-AP-bus-crash-on-early-config-change-callback-invocation.patch
+	patches.suse/xfs-bump-max-fsgeom-struct-version.patch
 	patches.suse/xfs-fix-units-conversion-error-in-xfs_bmap_del_extent_delay.patch
 	patches.suse/xfs-make-sure-maxlen-is-still-congruent-with-prod-when-rounding-down.patch
 	patches.suse/xfs-allow-read-IO-and-FICLONE-to-run-concurrently.patch
