--- a/series.conf
+++ b/series.conf
@@ -14044,6 +14044,7 @@
 	patches.suse/s390-ap-fix-AP-bus-crash-on-early-config-change-callback-invocation.patch
 	patches.suse/xfs-bump-max-fsgeom-struct-version.patch
 	patches.suse/xfs-hoist-freeing-of-rt-data-fork-extent-mappings.patch
+	patches.suse/xfs-prevent-rt-growfs-when-quota-is-enabled.patch
 	patches.suse/xfs-fix-units-conversion-error-in-xfs_bmap_del_extent_delay.patch
 	patches.suse/xfs-make-sure-maxlen-is-still-congruent-with-prod-when-rounding-down.patch
 	patches.suse/xfs-allow-read-IO-and-FICLONE-to-run-concurrently.patch
