--- a/series.conf
+++ b/series.conf
@@ -14048,6 +14048,7 @@
 	patches.suse/xfs-rt-stubs-should-return-negative-errnos-when-rt-disabled.patch
 	patches.suse/xfs-fix-units-conversion-error-in-xfs_bmap_del_extent_delay.patch
 	patches.suse/xfs-make-sure-maxlen-is-still-congruent-with-prod-when-rounding-down.patch
+	patches.suse/xfs-introduce-protection-for-drop-nlink.patch
 	patches.suse/xfs-allow-read-IO-and-FICLONE-to-run-concurrently.patch
 	patches.suse/iommu-tegra-smmu-Drop-unnecessary-error-check-for-for-debugfs_cr
 	patches.suse/iommu-arm-smmu-qcom-Add-SDM670-MDSS-compatible
