--- a/series.conf
+++ b/series.conf
@@ -14049,6 +14049,7 @@
 	patches.suse/xfs-fix-units-conversion-error-in-xfs_bmap_del_extent_delay.patch
 	patches.suse/xfs-make-sure-maxlen-is-still-congruent-with-prod-when-rounding-down.patch
 	patches.suse/xfs-introduce-protection-for-drop-nlink.patch
+	patches.suse/xfs-handle-nimaps-0-from-xfs_bmapi_write-in-xfs_alloc_file_space.patch
 	patches.suse/xfs-allow-read-IO-and-FICLONE-to-run-concurrently.patch
 	patches.suse/iommu-tegra-smmu-Drop-unnecessary-error-check-for-for-debugfs_cr
 	patches.suse/iommu-arm-smmu-qcom-Add-SDM670-MDSS-compatible
