xfs: inode recovery does not validate the recovered inode (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14416,6 +14416,7 @@
 	patches.suse/xfs-only-remap-the-written-blocks-in-xfs_reflink_end_cow_extent.patch
 	patches.suse/xfs-up-ic_sema-if-flushing-data-device-fails.patch
 	patches.suse/xfs-fix-internal-error-from-AGFL-exhaustion.patch
+	patches.suse/xfs-inode-recovery-does-not-validate-the-recovered-inode.patch
 	patches.suse/xfs-recovery-should-not-clear-di_flushiter-unconditionally.patch
 	patches.suse/scsi-qla2xxx-Fix-system-crash-due-to-bad-pointer-access.patch
 	patches.suse/perf-core-Fix-cpuctx-refcounting.patch
