xfs: dquot recovery does not validate the recovered dquot (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14522,6 +14522,7 @@
 	patches.suse/kselftest-arm64-Fix-output-formatting-for-za-fork.patch
 	patches.suse/arm64-add-dependency-between-vmlinuz.efi-and-Image.patch
 	patches.suse/xfs-clean-up-dqblk-extraction.patch
+	patches.suse/xfs-dquot-recovery-does-not-validate-the-recovered-dquot.patch
 	patches.suse/thunderbolt-Set-lane-bonding-bit-only-for-downstream.patch
 	patches.suse/thunderbolt-Send-uevent-after-asymmetric-symmetric-s.patch
 	patches.suse/thunderbolt-Only-add-device-router-DP-IN-to-the-head.patch
