--- a/series.conf
+++ b/series.conf
@@ -15359,6 +15359,7 @@
 	patches.suse/kunit-debugfs-Fix-unchecked-dereference-in-debugfs_p.patch
 	patches.suse/fanotify-store-fsid-in-mark-instead-of-in-connector.patch
 	patches.suse/fanotify-allow-weak-fsid-when-watching-a-single-file.patch
+	patches.suse/xfs-don-t-leak-recovered-attri-intent-items.patch
 	patches.suse/xfs-remove-unused-fields-from-struct-xbtree_ifakeroot.patch
 	patches.suse/xfs-update-dir3-leaf-block-metadata-after-swap.patch
 	patches.suse/xfs-short-circuit-xfs_growfs_data_private-if-delta-is-zero.patch
