--- a/series.conf
+++ b/series.conf
@@ -16720,6 +16720,7 @@
 	patches.suse/serial-max310x-fail-probe-if-clock-crystal-is-unstab.patch
 	patches.suse/serial-max310x-prevent-infinite-while-loop-in-port-s.patch
 	patches.suse/misc-fastrpc-Mark-all-sessions-as-invalid-in-cb_remo.patch
+	patches.suse/xfs-reset-XFS_ATTR_INCOMPLETE-filter-on-node-removal.patch
 	patches.suse/KVM-s390-vsie-fix-race-during-shadow-creation.patch
 	patches.suse/KVM-s390-fix-cc-for-successful-PQAP.patch
 	patches.suse/KVM-x86-Check-irqchip-mode-before-create-PIT.patch
