scsi: mpi3mr: Refresh sdev queue depth after controller reset (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -44916,6 +44916,7 @@
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.2.0.16.patch
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.2.0.16-patches.patch
 	patches.suse/scsi-fnic-Return-error-if-vmalloc-failed.patch
+	patches.suse/scsi-mpi3mr-Refresh-sdev-queue-depth-after-controller-reset.patch
 	patches.suse/scsi-lpfc-Change-VMID-driver-load-time-parameters-to.patch
 	patches.suse/scsi-lpfc-Reinitialize-an-NPIV-s-VMID-data-structure.patch
 	patches.suse/scsi-lpfc-Move-determination-of-vmid_flag-after-VMID.patch
