--- a/series.conf
+++ b/series.conf
@@ -45116,6 +45116,7 @@
 	patches.suse/clocksource-Skip-watchdog-check-for-large-watchdog-i.patch
 	patches.suse/tracing-trigger-Fix-to-return-error-if-failed-to-alloc-snapshot.patch
 	patches.suse/scsi-isci-Fix-an-error-code-problem-in-isci_io_request_build.patch
+	patches.suse/scsi-core-Move-scsi_host_busy-out-of-host-lock-for-waking-up-EH-handler.patch
 	patches.suse/firewire-core-correct-documentation-of-fw_csr_string.patch
 	patches.suse/HID-i2c-hid-of-fix-NULL-deref-on-failed-power-up.patch
 	patches.suse/nfc-nci-free-rx_data_reassembly-skb-on-NCI-device-cl.patch
