nvme-fabrics: fix I/O connect error handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45137,6 +45137,7 @@
 	patches.suse/misc-fastrpc-Mark-all-sessions-as-invalid-in-cb_remo.patch
 	patches.suse/scsi-lpfc-use-unsigned-type-for-num_sge.patch
 	patches.suse/nvme-host-fix-the-updating-of-the-firmware-version.patch
+	patches.suse/nvme-fabrics-fix-I-O-connect-error-handling.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
