--- a/series.conf
+++ b/series.conf
@@ -16760,6 +16760,7 @@
 	patches.suse/ASoC-SOF-IPC3-fix-message-bounds-on-ipc-ops.patch
 	patches.suse/ALSA-hda-realtek-fix-mute-micmute-LED-For-HP-mt645.patch
 	patches.suse/ALSA-usb-audio-More-relaxed-check-of-MIDI-jack-names.patch
+	patches.suse/nvme-fabrics-fix-I-O-connect-error-handling.patch
 	patches.suse/media-Revert-media-rkisp1-Drop-IRQF_SHARED.patch
 	patches.suse/media-ir_toy-fix-a-memleak-in-irtoy_tx.patch
 	patches.suse/thunderbolt-Fix-setting-the-CNS-bit-in-ROUTER_CS_5.patch
