--- a/series.conf
+++ b/series.conf
@@ -16778,6 +16778,7 @@
 	patches.suse/driver-core-fw_devlink-Improve-detection-of-overlapp.patch
 	patches.suse/i2c-qcom-geni-Correct-I2C-TRE-sequence.patch
 	patches.suse/i2c-i801-Fix-block-process-call-transactions.patch
+	patches.suse/irqchip-irq-brcmstb-l2-Add-write-memory-barrier-befo.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
