--- a/series.conf
+++ b/series.conf
@@ -16779,6 +16779,7 @@
 	patches.suse/i2c-qcom-geni-Correct-I2C-TRE-sequence.patch
 	patches.suse/i2c-i801-Fix-block-process-call-transactions.patch
 	patches.suse/irqchip-irq-brcmstb-l2-Add-write-memory-barrier-befo.patch
+	patches.suse/irqchip-gic-v3-its-Fix-GICv4.1-VPE-affinity-update.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
