kbuild: Fix changing ELF file type for output of gen_btf for big endian (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16780,6 +16780,7 @@
 	patches.suse/i2c-i801-Fix-block-process-call-transactions.patch
 	patches.suse/irqchip-irq-brcmstb-l2-Add-write-memory-barrier-befo.patch
 	patches.suse/irqchip-gic-v3-its-Fix-GICv4.1-VPE-affinity-update.patch
+	patches.suse/kbuild-Fix-changing-ELF-file-type-for-output-of-gen_.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
