--- a/series.conf
+++ b/series.conf
@@ -16777,6 +16777,7 @@
 	patches.suse/driver-core-Fix-device_link_flag_is_sync_state_only.patch
 	patches.suse/driver-core-fw_devlink-Improve-detection-of-overlapp.patch
 	patches.suse/i2c-qcom-geni-Correct-I2C-TRE-sequence.patch
+	patches.suse/i2c-i801-Fix-block-process-call-transactions.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
