modpost: trim leading spaces when processing source files list (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16781,6 +16781,7 @@
 	patches.suse/irqchip-irq-brcmstb-l2-Add-write-memory-barrier-befo.patch
 	patches.suse/irqchip-gic-v3-its-Fix-GICv4.1-VPE-affinity-update.patch
 	patches.suse/kbuild-Fix-changing-ELF-file-type-for-output-of-gen_.patch
+	patches.suse/modpost-trim-leading-spaces-when-processing-source-f.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
