Drop bcm5974 input patch causing a regression (bsc#1220030)

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -817,3 +817,4 @@ d81304bc6193554014d4372a01debdf65e1e9a4d #  CONFIG_UCLAMP_TASK is not set
 6b00a40147653c8ea748e8f4396510f252763364 #  CONFIG_UCLAMP_TASK is not set
 73feb8d5fa3b755bb51077c0aabfb6aa556fd498 # not a bug fix, a prereq for 3640bf8584f4 ("ftrace: Add support to resolve module symbols in ftrace_lookup_symbols") which was not taken
 1147dd0503564fa0e03489a039f9e0c748a03db4 # nvme io_uring passthru is disabled
+2b9c3eb32a699acdd4784d6b93743271b4970899 # input/mouse/bcm5974: causes a regression on MacBook touchpad alone (bsc#1220030)
