lib/stackdepot: Move stack_record struct definition into the header (jsc-PED#7423).

--- a/series.conf
+++ b/series.conf
@@ -16932,6 +16932,7 @@
 	patches.suse/net-phy-realtek-use-generic-MDIO-constants.patch
 	patches.suse/net-phy-realtek-add-5Gbps-support-to-rtl822x_config_.patch
 	patches.suse/0001-lib-stackdepot-Fix-first-entry-having-a-0-handle.patch
+	patches.suse/0002-lib-stackdepot-Move-stack_record-struct-definition-i.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
