mm,page_owner: Maintain own list of stack_records structs (jsc-PED#7423).

--- a/series.conf
+++ b/series.conf
@@ -16933,6 +16933,7 @@
 	patches.suse/net-phy-realtek-add-5Gbps-support-to-rtl822x_config_.patch
 	patches.suse/0001-lib-stackdepot-Fix-first-entry-having-a-0-handle.patch
 	patches.suse/0002-lib-stackdepot-Move-stack_record-struct-definition-i.patch
+	patches.suse/0003-mm-page_owner-Maintain-own-list-of-stack_records-str.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
